# automake-learning

./: Makefile.am  README  README.md  configure.ac
include/: echo.h
src/: echo.c  hello.c
